--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         </div>
 
     </section>
-    <section class="services mt-5 pt-5 mb-5" id="services">
+    <section class="services mt-5 mb-5" id="services">
         <div class="container">
             <div class="row mb-5">
-                <div class="section-title">
+                <div class="section-title mt-5 pt-5 mb-4">
                     <h2 class="text-uppercase text-center mb-3 fs-1 fw-bold">services</h2>
                     <p class="text-muted fst-italic text-center">Lorem ipsum dolor sit amet consectetur.</p>
                 </div>
